--- a/sisweb/mygames/templates/base.html
+++ b/sisweb/mygames/templates/base.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <link rel = "stylesheet"
-   type = "text/css"
-   href = "css/base.css" />
-</head>
 <body>
 <div id="header">
     {% block header %}
-        {% if user.username %}
-            <p>User: {{ user.username }} |
-                <a href="{% url 'logout' %}?next={{request.path}}">logout</a></p>
+    <div id="nav">
+        {% if user.is_authenticated %}
+            welcome {{ user.username }}
+             <a href="/mygames/">games</a> |
+             (<a href="{% url 'logout' %}?next=/">logout</a>)
         {% else %}
-            <p><a href="{% url 'login' %}?next={{request.path}}">login</a></p>
+            <a href="/">home</a> |
+            <a href="{% url 'login' %}?next={% firstof request.path '/' %}">login</a>
+            <a href="/register/">register</a>
         {% endif %}
+    </div>
     {% endblock %}
-</div>
-<div id="sidebar">
-    {% block sidebar %}<ul><li><a href="/mygames">Home</a></li></ul>{% endblock %}
 </div>
 <div id="content">
     {% block content %}
