--- a/sisweb/mygames/templates/registration/login.html
+++ b/sisweb/mygames/templates/registration/login.html
@@ -2,7 +2,7 @@
     <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
 
-<h2> MyRecommendations Login </h2>
+<h2> Login </h2>
 
 <form method="post" action="{% url 'login' %}">
     <table>
@@ -18,8 +18,6 @@
             <td><input type="hidden" name="next" value="{{ next }}"/></td>
         </tr>
     </table>
-
     <input type="submit" value="login" />
-
     {% csrf_token %}
 </form>
